[package]
name = "ciderver"
version = "0.1.1"
edition = "2021"
descriiption = "the modified flavour of semver used by Cider"
license = "MIT"
repository = "https://github.com/d3rpp/ciderver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
regex = "1.10"
lazy_static = "1.4"
semver = "1.0"

[dev-dependencies]
serde_test = "1.0"